--- a/lomawebsite/coreWebsite/templates/coreWebsite/contact.html
+++ b/lomawebsite/coreWebsite/templates/coreWebsite/contact.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block title %}Contact{% endblock %}
 
 {% block content %}
 <div class="container">
     <h1 class="mt-4">Contact</h1>
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5 fw-bold display-3" style="color: #8a1538;">Contact Us</h2>
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <form method="post" action="">
+                        {% csrf_token %}
+                        {% crispy form %}
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Theater Information -->
     <section class="mt-4">
