--- a/lomawebsite/coreWebsite/templates/coreWebsite/home.html
+++ b/lomawebsite/coreWebsite/templates/coreWebsite/home.html
@@ -37,7 +37,7 @@
                         <li>{{ showtime }}</li>
                         {% endfor %}
                     </ul>
-                    <a href="#" class="btn btn-brand btn-lg">Buy Tickets</a>
+                    <a href="https://www.atomtickets.com/theaters/the-loma-theater/12346?fbclid=IwAR1l0XVkbBYj9tiN410xGWJm04CrjB7KFfrAkg5BZKrBikeEMiGBOV1u5eo" class="btn btn-brand btn-lg">Buy Tickets</a>
                 </div>
             </div>
         </div>
@@ -118,6 +118,7 @@
                 {% endfor %}
             </div>
             {% endfor %}
+            <a href="https://www.atomtickets.com/theaters/the-loma-theater/12346?fbclid=IwAR1l0XVkbBYj9tiN410xGWJm04CrjB7KFfrAkg5BZKrBikeEMiGBOV1u5eo" class="btn btn-brand btn-lg">Buy Tickets</a>
         </div>
     </section>
 
